Add relation label for training

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SPARK_MASTER=local[*]
+export SPARK_MASTER=local[*]
 CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 RELATIONS_PATH="hdfs:/user/ine11ega/entities"
 TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
