--- a/.env
+++ b/.env
@@ -2,6 +2,10 @@ export SPARK_MASTER=local[*]
 CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 RELATIONS_PATH="hdfs:/user/ine11ega/entities"
 TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
+EVAL_FILE="hdfs:/usr/dat11al1/eval-place_of_birth.json.txt"
 
 CMD="./run-cluster.sh $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
-alias runc="echo $CMD && $CMD" 
+ECMD="./run-cluster.sh -e $EVAL_FILE $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+alias runc="echo $CMD && $CMD"
+alias erunc="echo $ECMD && $ECMD"
+
