Add alias to run locally "lrun" and with evaluation "elrun"

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-export SPARK_MASTER=local[*]
+# Cluster
 CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 RELATIONS_PATH="hdfs:/user/ine11ega/entities"
 TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
@@ -8,4 +8,18 @@ CMD="./run-cluster.sh $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
 ECMD="./run-cluster.sh -e $EVAL_FILE $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
 alias runc="echo $CMD && $CMD"
 alias erunc="echo $ECMD && $ECMD"
+
+# Local
+export SPARK_MASTER=local[*]
+L_CORPUS_PATH="../data/wikipedia-corpus-herd"
+L_RELATIONS_PATH="../data/0.1.0-27-gc3d511d/entities"
+L_TEMP_DATA_PATH="../data/0.1.0-27-gc3d511d/relation_model/sv"
+
+L_CMD="sbt run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"
+alias lrun="echo $L_CMD && $L_CMD"
+
+# Evaluation local
+L_EVAL_FILE="../data/0.1.0-27-gc3d511d/relation_model/en/eval_files/date_of_birth.json.txt"
+EL_CMD="sbt run -e $L_EVAL_FILE $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"
+alias elrun="echo $EL_CMD && $EL_CMD"
 
