Add rune command

--- a/.env
+++ b/.env
@@ -23,3 +23,10 @@ L_EVAL_FILE="../data/0.1.0-27-gc3d511d/relation_model/en/eval_files/date_of_birt
 EL_CMD="sbt run -e $L_EVAL_FILE $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"
 alias elrun="echo $EL_CMD && $EL_CMD"
 
+# Exjobb
+E_CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
+E_RELATIONS_PATH="\~/entities"
+E_TEMP_DATA_PATH="\~/relation_model"
+
+E_CMD="./run-exjobb8.sh $E_CORPUS_PATH $E_RELATIONS_PATH $E_TEMP_DATA_PATH"
+alias rune="echo $E_CMD && $E_CMD"
