Fix elrun in .env

--- a/.env
+++ b/.env
@@ -15,12 +15,12 @@ L_CORPUS_PATH="../data/wikipedia-corpus-herd"
 L_RELATIONS_PATH="../data/0.1.0-27-gc3d511d/entities"
 L_TEMP_DATA_PATH="../data/0.1.0-27-gc3d511d/relation_model/sv"
 
-L_CMD="sbt run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"
+L_CMD='sbt "run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias lrun="echo $L_CMD && $L_CMD"
 
 # Evaluation local
 L_EVAL_FILE="../data/0.1.0-27-gc3d511d/relation_model/en/eval_files/date_of_birth.json.txt"
-EL_CMD="sbt run -e $L_EVAL_FILE $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"
+EL_CMD='sbt "run -e $L_EVAL_FILE $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias elrun="echo $EL_CMD && $EL_CMD"
 
 # Exjobb
