--- a/.env
+++ b/.env
@@ -12,14 +12,14 @@ alias erunc="echo $ECMD && $ECMD"
 # Local
 export SPARK_MASTER=local[*]
 L_CORPUS_PATH="../data/wikipedia-corpus-herd"
-L_RELATIONS_PATH="../data/0.1.0-27-gc3d511d/entities"
-L_TEMP_DATA_PATH="../data/0.1.0-27-gc3d511d/relation_model/sv"
+L_RELATIONS_PATH="../data/0.1.0-32-g4d0b685/entities"
+L_TEMP_DATA_PATH="../data/0.1.0-32-g4d0b685/relation_model/en"
 
 L_CMD='sbt "run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias lrun="echo $L_CMD && $L_CMD"
 
 # Evaluation local
-L_EVAL_FILE="../data/0.1.0-27-gc3d511d/relation_model/en/eval_files/date_of_birth.json.txt"
+L_EVAL_FILE="../data/eval_files/place_of_birth.json"
 EL_CMD='sbt "run -e $L_EVAL_FILE $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias elrun="echo $EL_CMD && $EL_CMD"
 
