Add more work on w2c

--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ alias erunc="echo $ECMD && $ECMD"
 
 # Local
 export SPARK_MASTER=local[*]
-L_CORPUS_PATH="../data/wikipedia-corpus-herd/en"
-L_RELATIONS_PATH="../data/0.1.0-32-g4d0b685/entities"
-L_TEMP_DATA_PATH="../data/0.1.0-32-g4d0b685/relation_model/en"
+L_CORPUS_PATH="../../data/herd/sv"
+L_RELATIONS_PATH="../../data/prometheus-data/0.1.0-32-g4d0b685/entities"
+L_TEMP_DATA_PATH="../../data/prometheus-data/0.1.0-32-g4d0b685/relation_model/sv"
 
 L_CMD='sbt "run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias lrun="echo $L_CMD && $L_CMD"
