Fix eval file paths, update erunc to do multiple evaluations

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 RELATIONS_PATH="hdfs:/user/ine11ega/entities"
 TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
-EVAL_FILE="hdfs:/user/dat11al1/eval-place_of_birth.json.txt"
+EVAL_FILES="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
 
 CMD="./run-cluster.sh $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
-ECMD="./run-cluster.sh -e $EVAL_FILE $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+ECMD="./run-cluster.sh -e $EVAL_FILES $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
 alias runc="echo $CMD && $CMD"
 alias erunc="echo $ECMD && $ECMD"
 
@@ -19,8 +19,8 @@ L_CMD='sbt "run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias lrun="echo $L_CMD && $L_CMD"
 
 # Evaluation local
-L_EVAL_FILE="../data/eval_files/place_of_birth.json"
-EL_CMD='sbt "run -e $L_EVAL_FILE $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
+L_EVAL_FILES="../data/eval_files/place_of_birth.json ../data/eval_files/institution.json"
+EL_CMD='sbt "run -e $L_EVAL_FILES $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias elrun="echo $EL_CMD && $EL_CMD"
 
 # Exjobb
