Add language arg to Prometheus (will be appended to temp data path)

--- a/.env
+++ b/.env
@@ -3,30 +3,34 @@ CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 RELATIONS_PATH="hdfs:/user/ine11ega/entities"
 TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
 EVAL_FILES="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+LANG="sv"
 
-CMD="./run-cluster.sh $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
-ECMD="./run-cluster.sh -e $EVAL_FILES $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+CMD="./run-cluster.sh -l $LANG $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+ECMD="./run-cluster.sh -l $LANG -e $EVAL_FILES $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
 alias runc="echo $CMD && $CMD"
 alias erunc="echo $ECMD && $ECMD"
 
 # Local
+L_LANG="en"
 export SPARK_MASTER=local[*]
 L_CORPUS_PATH="../data/wikipedia-corpus-herd/en"
 L_RELATIONS_PATH="../data/0.1.0-32-g4d0b685/entities"
-L_TEMP_DATA_PATH="../data/0.1.0-32-g4d0b685/relation_model/en"
+L_TEMP_DATA_PATH="../data/0.1.0-32-g4d0b685/relation_model"
 
-L_CMD='sbt "run $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
+L_CMD='sbt "run -l $L_LANG $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias lrun="echo $L_CMD && $L_CMD"
 
 # Evaluation local
+EL_LANG="en"
 L_EVAL_FILES="../data/eval_files/place_of_birth.json ../data/eval_files/institution.json"
-EL_CMD='sbt "run -e $L_EVAL_FILES $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
+EL_CMD='sbt "run -l $EL_LANG -e $L_EVAL_FILES $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
 alias elrun="echo $EL_CMD && $EL_CMD"
 
 # Exjobb
+E_LANG="sv"
 E_CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 E_RELATIONS_PATH="\~/entities"
 E_TEMP_DATA_PATH="\~/relation_model"
 
-E_CMD="./run-exjobb8.sh $E_CORPUS_PATH $E_RELATIONS_PATH $E_TEMP_DATA_PATH"
+E_CMD="./run-exjobb8.sh -l $E_LANG $E_CORPUS_PATH $E_RELATIONS_PATH $E_TEMP_DATA_PATH"
 alias rune="echo $E_CMD && $E_CMD"
