Do not mess with $LANG

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
 RELATIONS_PATH="hdfs:/user/ine11ega/entities"
 TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
 EVAL_FILES="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
-LANG="sv"
+C_LANG="sv"
 
-CMD="./run-cluster.sh -l $LANG $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
-ECMD="./run-cluster.sh -l $LANG -e $EVAL_FILES $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+CMD="./run-cluster.sh -l $C_LANG $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+ECMD="./run-cluster.sh -l $C_LANG -e $EVAL_FILES $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
 alias runc="echo $CMD && $CMD"
 alias erunc="echo $ECMD && $ECMD"
 
