wip: Refactor runc

--- a/.env
+++ b/.env
@@ -1,12 +1,32 @@
 # Cluster
-CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
-RELATIONS_PATH="hdfs:/user/ine11ega/entities"
-TEMP_DATA_PATH="hdfs:/user/ine11ega/relation_model"
-EVAL_FILES="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
-C_LANG="sv"
+function runc() {
+  case "$1" in
+    sv)
+      echo sv
+      ;;
+    en)
+      echo en
+      ;;
+    *)
+      echo "unknown language $1"
+      exit 1
+  esac
 
-CMD="./run-cluster.sh -l $C_LANG $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
-ECMD="./run-cluster.sh -l $C_LANG -e $EVAL_FILES $CORPUS_PATH $RELATIONS_PATH $TEMP_DATA_PATH"
+  local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
+  local relations_path="hdfs:/user/ine11ega/entities"
+  local temp_data_path=="hdfs:/user/ine11ega/relation_model"
+  local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+  local lang="$1"
+
+  if [ $1 == "eval" ]; then
+    echo "Running evaluation on cluster"
+    local cmd="./run-cluster.sh cluster -l $lang -e $eval_files $corpus_path $relations_path $temp_data_path"
+  else
+    local cmd="./run-cloud.sh cluster -l $lang $corpus_path $relations_path $temp_data_path"
+  fi
+  echo $cmd && $cmd
+}
+
 alias runc="echo $CMD && $CMD"
 alias erunc="echo $ECMD && $ECMD"
 
