Add glorius runc function in .env
The syntax is: runc <sv|en> <semantica|local|exjobb8> [demo|eval]

--- a/.env
+++ b/.env
@@ -1,56 +1,92 @@
-# Cluster
 function runc() {
+  local usage="runc <lang> <local|semantica|exjobb8> [demo|eval]"
+
+  # check language
   case "$1" in
     sv)
-      echo sv
+      local language="$1"
       ;;
     en)
-      echo en
+      local language="$1"
       ;;
     *)
-      echo "unknown language $1"
-      exit 1
+      echo "unknown language \"$1\""
+      echo $usage
+      return 1
   esac
 
-  local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
-  local relations_path="hdfs:/user/ine11ega/entities"
-  local temp_data_path=="hdfs:/user/ine11ega/relation_model"
-  local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
-  local lang="$1"
 
-  if [ $1 == "eval" ]; then
-    echo "Running evaluation on cluster"
-    local cmd="./run-cluster.sh cluster -l $lang -e $eval_files $corpus_path $relations_path $temp_data_path"
-  else
-    local cmd="./run-cloud.sh cluster -l $lang $corpus_path $relations_path $temp_data_path"
-  fi
-  echo $cmd && $cmd
+  # host
+  case "$2" in
+    local)
+      local corpus_path="../data/wikipedia-corpus-herd/$1"
+      local relations_path="../data/0.1.0-32-g4d0b685/entities"
+      local temp_data_path="../data/0.1.0-32-g4d0b685/relation_model"
+      local eval_files="../data/eval_files/place_of_birth.json ../data/eval_files/institution.json"
+      export SPARK_MASTER="local[*]"
+      ;;
+    semantica)
+      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
+      local relations_path="hdfs:/user/ine11ega/entities"
+      local temp_data_path="hdfs:/user/ine11ega/relation_model"
+      local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+      ;;
+    exjobb8)
+      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
+      local relations_path="\~/entities"
+      local temp_data_path="\~/relation_model"
+      local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+      ;;
+    *)
+      echo "unknown target \"$2\""
+      echo $usage
+      return 1
+  esac
+
+  # mode
+  case "$3" in
+    demo)
+      if [ "$2" != "local" ]; then
+        echo "cannot run demo on $2"
+        return 1
+      fi
+
+      local args="-d -l $language $corpus_path $relations_path $temp_data_path"
+
+      if [ "$2" = "local" ]; then
+        local cmd="sbt \"run -d $args\""
+        echo $cmd
+        eval $cmd
+      else
+        local cmd="./run-cloud.sh ./$2 $args"
+        echo $cmd
+        eval $cmd
+      fi
+      ;;
+    eval)
+      local args="-l $language -e $eval_files $corpus_path $relations_path $temp_data_path"
+      if [ "$2" = "local" ]; then
+        local cmd="sbt \"run -d $args\""
+        echo $cmd
+        eval $cmd
+      else
+        local cmd="./run-cloud.sh ./$2 $args"
+        echo $cmd
+        eval $cmd
+      fi
+      ;;
+    *)
+      local args="-l $language $corpus_path $relations_path $temp_data_path"
+      if [ "$2" = "local" ]; then
+        local cmd="sbt \"run -d $args\""
+        echo $cmd
+        eval $cmd
+      else
+        local cmd="./run-cloud.sh ./$2 $args"
+        echo $cmd
+        eval $cmd
+      fi
+      ;;
+  esac
 }
 
-alias runc="echo $CMD && $CMD"
-alias erunc="echo $ECMD && $ECMD"
-
-# Local
-L_LANG="en"
-export SPARK_MASTER=local[*]
-L_CORPUS_PATH="../data/wikipedia-corpus-herd/en"
-L_RELATIONS_PATH="../data/0.1.0-32-g4d0b685/entities"
-L_TEMP_DATA_PATH="../data/0.1.0-32-g4d0b685/relation_model"
-
-L_CMD='sbt "run -l $L_LANG $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
-alias lrun="echo $L_CMD && $L_CMD"
-
-# Evaluation local
-EL_LANG="en"
-L_EVAL_FILES="../data/eval_files/place_of_birth.json ../data/eval_files/institution.json"
-EL_CMD='sbt "run -l $EL_LANG -e $L_EVAL_FILES $L_CORPUS_PATH $L_RELATIONS_PATH $L_TEMP_DATA_PATH"'
-alias elrun="echo $EL_CMD && $EL_CMD"
-
-# Exjobb
-E_LANG="sv"
-E_CORPUS_PATH="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
-E_RELATIONS_PATH="\~/entities"
-E_TEMP_DATA_PATH="\~/relation_model"
-
-E_CMD="./run-exjobb8.sh -l $E_LANG $E_CORPUS_PATH $E_RELATIONS_PATH $E_TEMP_DATA_PATH"
-alias rune="echo $E_CMD && $E_CMD"
