--- a/.env
+++ b/.env
@@ -15,14 +15,14 @@ function runc() {
       return 1
   esac
 
-
   # host
   case "$2" in
     local)
-      local corpus_path="../data/wikipedia-corpus-herd/$1"
-      local relations_path="../data/0.1.0-32-g4d0b685/entities"
-      local temp_data_path="../data/0.1.0-32-g4d0b685/relation_model"
-      local eval_files="../data/eval_files/place_of_birth.json ../data/eval_files/institution.json"
+      : "${DATA_PATH:?You need to set DATA_PATH non-empty}"
+      local corpus_path="${DATA_PATH}/wikipedia-corpus-herd/$1"
+      local relations_path="${DATA_PATH}/0.1.0-32-g4d0b685/entities"
+      local temp_data_path="${DATA_PATH}/0.1.0-32-g4d0b685/relation_model"
+      local eval_files="${DATA_PATH}/eval_files/place_of_birth.json ../data/eval_files/institution.json"
       export SPARK_MASTER="local[*]"
       ;;
     semantica)
@@ -58,7 +58,7 @@ function runc() {
         echo $cmd
         eval $cmd
       else
-        local cmd="./run-cloud.sh ./$2 $args"
+        local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
         echo $cmd
         eval $cmd
       fi
@@ -70,7 +70,7 @@ function runc() {
         echo $cmd
         eval $cmd
       else
-        local cmd="./run-cloud.sh ./$2 $args"
+        local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
         echo $cmd
         eval $cmd
       fi
@@ -82,7 +82,7 @@ function runc() {
         echo $cmd
         eval $cmd
       else
-        local cmd="./run-cloud.sh ./$2 $args"
+        local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
         echo $cmd
         eval $cmd
       fi
