Update run-cloud.sh to use sbt pack, improve runc in .env

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 function runc() {
   local usage="runc <lang> <local|semantica|exjobb8> [demo|eval]"
 
+  # Pretty colours
+  local L_RED="\e[91m"
+  local RES="\e[0m"
+  local GREEN="\e[32m"
+  local CYAN="\e[95m"
+
   # check language
   case "$1" in
     sv)
@@ -10,8 +16,8 @@ function runc() {
       local language="$1"
       ;;
     *)
-      echo "unknown language \"$1\""
       echo $usage
+      printf "${L_RED}Error! unknown or missing language: %s\n$RES" $1
       return 1
   esac
 
@@ -38,8 +44,8 @@ function runc() {
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
       ;;
     *)
-      echo "unknown target \"$2\""
       echo $usage
+      printf "${L_RED}Error! unknown or missing target: %s\n$RES" $2
       return 1
   esac
 
@@ -47,43 +53,43 @@ function runc() {
   case "$3" in
     demo)
       if [ "$2" != "local" ]; then
-        echo "cannot run demo on $2"
+        printf "${L_RED}Error! cannot run demo on %s\n$RES" $2
         return 1
       fi
 
       local args="-d -l $language $corpus_path $relations_path $temp_data_path"
 
       if [ "$2" = "local" ]; then
-        local cmd="sbt \"run -d $args\""
-        echo $cmd
+        local cmd="sbt \"run $args\""
+        printf "${GREEN}%s\n${RES}" $cmd
         eval $cmd
       else
         local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
-        echo $cmd
+        printf "${GREEN}%s\n${RES}" $cmd
         eval $cmd
       fi
       ;;
     eval)
       local args="-l $language -e $eval_files $corpus_path $relations_path $temp_data_path"
       if [ "$2" = "local" ]; then
-        local cmd="sbt \"run -d $args\""
-        echo $cmd
+        local cmd="sbt \"run $args\""
+        printf "${GREEN}%s\n${RES}" $cmd
         eval $cmd
       else
         local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
-        echo $cmd
+        printf "${GREEN}%s\n${RES}" $cmd
         eval $cmd
       fi
       ;;
     *)
       local args="-l $language $corpus_path $relations_path $temp_data_path"
       if [ "$2" = "local" ]; then
-        local cmd="sbt \"run -d $args\""
-        echo $cmd
+        local cmd="sbt \"run $args\""
+        printf "${GREEN}%s\n${RES}" $cmd
         eval $cmd
       else
         local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
-        echo $cmd
+        printf "${GREEN}%s\n${RES}" $cmd
         eval $cmd
       fi
       ;;
