Add word2vec path to runc and company

--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ function runc() {
       local relations_path="${DATA_PATH}/0.1.0-32-g4d0b685/entities"
       local temp_data_path="${DATA_PATH}/0.1.0-32-g4d0b685/relation_model"
       local eval_files="${DATA_PATH}/eval_files/place_of_birth.json ../data/eval_files/institution.json"
+      local word2vec_path="${DATA_PATH}/word2vec/$1/model.bin"
       export SPARK_MASTER="local[*]"
       ;;
     semantica)
@@ -36,12 +37,14 @@ function runc() {
       local relations_path="hdfs:/user/ine11ega/entities"
       local temp_data_path="hdfs:/user/ine11ega/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+      local word2vec_path="hdfs:/user/ine11ega/word2vec/$1/model.bin"
       ;;
     exjobb8)
       local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
       local relations_path="\~/entities"
       local temp_data_path="\~/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+      local word2vec_path="hdfs:/user/ine11ega/word2vec/$1/model.bin"
       ;;
     *)
       echo $usage
@@ -57,7 +60,7 @@ function runc() {
         return 1
       fi
 
-      local args="-d -l $language $corpus_path $relations_path $temp_data_path"
+      local args="-d -l $language $corpus_path $relations_path $temp_data_path $word2vec_path"
 
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
@@ -70,7 +73,7 @@ function runc() {
       fi
       ;;
     eval)
-      local args="-l $language -e $eval_files $corpus_path $relations_path $temp_data_path"
+      local args="-l $language -e $eval_files $corpus_path $relations_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
@@ -82,7 +85,7 @@ function runc() {
       fi
       ;;
     *)
-      local args="-l $language $corpus_path $relations_path $temp_data_path"
+      local args="-l $language $corpus_path $relations_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
