--- a/.env
+++ b/.env
@@ -33,14 +33,14 @@ function runc() {
       export SPARK_MASTER="local[*]"
       ;;
     semantica)
-      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
+      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
       local relations_path="hdfs:/user/ine11ega/entities"
       local temp_data_path="hdfs:/user/ine11ega/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
       local word2vec_path="/home/ine11ega/word2vec/$1/model.bin"
       ;;
     exjobb8)
-      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/sv/herd"
+      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
       local relations_path="\~/entities"
       local temp_data_path="\~/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
