--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ function runc() {
     local)
       : "${DATA_PATH:?You need to set DATA_PATH non-empty}"
       local corpus_path="${DATA_PATH}/wikipedia-corpus-herd/$1"
-      local relations_path="${DATA_PATH}/0.1.0-32-g4d0b685/entities"
-      local temp_data_path="${DATA_PATH}/0.1.0-32-g4d0b685/relation_model"
+      local relations_path="${DATA_PATH}/prometheus-data/0.2.0-3-ge7006ac/entities"
+      local temp_data_path="${DATA_PATH}/prometheus-data/0.2.0-3-ge7006ac/relation_model"
       local eval_files="${DATA_PATH}/eval_files/place_of_birth.json ../data/eval_files/institution.json"
       local word2vec_path="${DATA_PATH}/word2vec/$1/model.bin"
       export SPARK_MASTER="local[*]"
@@ -41,7 +41,7 @@ function runc() {
       ;;
     exjobb8)
       local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
-      local relations_path="\~/entities"
+      local relations_path="hdfs:/user/ine11ega/entities"
       local temp_data_path="\~/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
       local word2vec_path="/home/erikaxel/word2vec/$1/model.bin"
