--- a/.env
+++ b/.env
@@ -40,10 +40,10 @@ function runc() {
       local word2vec_path="/home/ine11ega/word2vec/$1/model.bin"
       ;;
     exjobb8)
-      local corpus_path="hdfs:///semantica004.cs.lth.se:8020/user/antons/wikipedia-pipeline/$1/herd"
-      local relations_path="hdfs:///semantica004.cs.lth.se:8020/user/ine11ega/entities"
+      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
+      local relations_path="hdfs:/user/ine11ega/entities"
       local temp_data_path="/home/erikaxel/relation_model"
-      local eval_files="hdfs:///semantica004.cs.lth.se:8020/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+      local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
       local word2vec_path="/home/erikaxel/word2vec/$1/model.bin"
       ;;
     *)
@@ -98,4 +98,3 @@ function runc() {
       ;;
   esac
 }
-
