--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ function runc() {
       local relations_path="hdfs:/user/ine11ega/entities"
       local temp_data_path="hdfs:/user/ine11ega/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
-      local word2vec_path="/home/ine11ega/word2vec/$1/"
+      local word2vec_path="hdfs:/user/ine11ega/word2vec/$1"
       ;;
     exjobb8)
       local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
