--- a/.env
+++ b/.env
@@ -37,14 +37,14 @@ function runc() {
       local relations_path="hdfs:/user/ine11ega/entities"
       local temp_data_path="hdfs:/user/ine11ega/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
-      local word2vec_path="/home/ine11ega/word2vec/$1/"
+      local word2vec_path="hdfs:/user/ine11ega/word2vec/$1"
       ;;
     exjobb8)
       local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
       local relations_path="hdfs:/user/ine11ega/entities"
-      local temp_data_path="/home/erikaxel/relation_model"
+      local temp_data_path="file:/home/erikaxel/relation_model-pos"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
-      local word2vec_path="/home/erikaxel/word2vec/$1"
+      local word2vec_path="file:/home/erikaxel/word2vec/$1"
       ;;
     *)
       echo $usage
