--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ function runc() {
        local corpus_path="s3://sony-prometheus-data/herd/$1"
        local relations_path="s3://sony-prometheus-data/entities"
        local temp_data_path="s3://sony-prometheus-data/relation_model"
-       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
+       local eval_files="s3://sony-prometheus-data/eval-place_of_birth.json s3://sony-prometheus-data/eval_institution.json"
        local word2vec_path="s3://sony-prometheus-data/word2vec/$1"
        ;;
     exjobb8)
