Fine tuned aws. Set larger batch size and default epochs

--- a/scripts/aws/emrconfig.json
+++ b/scripts/aws/emrconfig.json
@@ -29,5 +29,11 @@
       "Classification": "spark-defaults",
       "Properties": {
       }
+    },
+    {
+      "Classification": "spark",
+      "Properties": {
+        "maximizeResourceAllocation": "true"
+      }
     }
 ]
