Update env file for local target

--- a/.env
+++ b/.env
@@ -25,11 +25,11 @@ function runc() {
   case "$2" in
     local)
       : "${DATA_PATH:?You need to set DATA_PATH non-empty}"
-      local corpus_path="${DATA_PATH}/wikipedia-corpus-herd/$1"
-      local relations_path="${DATA_PATH}/prometheus-data/0.2.0-3-ge7006ac/entities"
-      local temp_data_path="${DATA_PATH}/prometheus-data/0.2.0-3-ge7006ac/relation_model"
-      local eval_files="${DATA_PATH}/eval_files/place_of_birth.json ../data/eval_files/institution.json"
-      local word2vec_path="${DATA_PATH}/word2vec/$1/model.bin"
+      local corpus_path="file:${DATA_PATH}/wikipedia-corpus-herd/$1"
+      local relations_path="file:${DATA_PATH}/prometheus-data/wip/entities"
+      local temp_data_path="file:${DATA_PATH}/prometheus-data/wip/relation_model"
+      local eval_files="file:${DATA_PATH}/eval_files/place_of_birth.json ../data/eval_files/institution.json"
+      local word2vec_path="file:${DATA_PATH}/word2vec/$1/model.bin"
       export SPARK_MASTER="local[*]"
       ;;
     semantica)
