Update herd semantica paths

--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ function runc() {
       export SPARK_MASTER="local[*]"
       ;;
     semantica)
-      local corpus_path="hdfs:/user/antons/wikipedia-pipeline/$1/herd"
+      local corpus_path="hdfs:/user/ine11ega/herd/$1"
       local relation_config_path="hdfs:/user/ine11ega/target_relations.tsv"
       local wikidata_path="hdfs:/user/marcusk/wikipedia-pipeline/mul/parsed-wikidata"
       local temp_data_path="hdfs:/user/ine11ega/relation_model"
