Add cli option to control how far the pipeline will run

--- a/.env
+++ b/.env
@@ -71,7 +71,7 @@ function runc() {
         return 1
       fi
 
-      local args="-d -l $language $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local args="-d -l $language full $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
 
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
@@ -84,7 +84,7 @@ function runc() {
       fi
       ;;
     eval)
-      local args="-l $language -e $eval_files $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local args="-l $language -e $eval_files full $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
@@ -96,7 +96,9 @@ function runc() {
       fi
       ;;
     *)
-      local args="-l $language $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local stage=${3-full}
+      echo $stage
+      local args="-l $language ${stage} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
