Add possibility of passing extra arguments to runc

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 function runc() {
-  local usage="runc <lang> <local|semantica|exjobb8> [demo|eval]"
+  local usage="runc <lang> <local|semantica|exjobb8> [demo|eval] [extra opts]"
 
   # Pretty colours
   local L_RED="\e[91m"
@@ -71,7 +71,8 @@ function runc() {
         return 1
       fi
 
-      local args="-d -l $language full $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local extra_opts=${@:4}
+      local args="-d -l $language full ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
 
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
@@ -84,7 +85,8 @@ function runc() {
       fi
       ;;
     eval)
-      local args="-l $language -e $eval_files full $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local extra_opts=${@:4}
+      local args="-l $language -e $eval_files full ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
@@ -97,8 +99,8 @@ function runc() {
       ;;
     *)
       local stage=${3-full}
-      echo $stage
-      local args="-l $language ${stage} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local extra_opts=${@:4}
+      local args="-l $language ${stage} ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
