Cleaned up in prometheus parameters and env script

--- a/.env
+++ b/.env
@@ -65,28 +65,9 @@ function runc() {
 
   # mode
   case "$3" in
-    demo)
-      if [ "$2" != "local" ]; then
-        printf "${L_RED}Error! cannot run demo on %s\n$RES" $2
-        return 1
-      fi
-
-      local extra_opts=${@:4}
-      local args="-d -l $language full ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
-
-      if [ "$2" = "local" ]; then
-        local cmd="sbt \"run $args\""
-        printf "${GREEN}%s\n${RES}" $cmd
-        eval $cmd
-      else
-        local cmd="./scripts/runc/run-cloud.sh ./scripts/runc/$2 $args"
-        printf "${GREEN}%s\n${RES}" $cmd
-        eval $cmd
-      fi
-      ;;
     eval)
       local extra_opts=${@:4}
-      local args="-l $language -e $eval_files full ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local args=" -e $eval_files ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
@@ -98,9 +79,8 @@ function runc() {
       fi
       ;;
     *)
-      local stage=${3-full}
-      local extra_opts=${@:4}
-      local args="-l $language ${stage} ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local extra_opts=${@:3}
+      local args=" ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
