Begin adding Wikidata evaluation

--- a/.env
+++ b/.env
@@ -67,7 +67,7 @@ function runc() {
   case "$3" in
     eval)
       local extra_opts=${@:4}
-      local args=" -e $eval_files ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
+      local args=" --modelEvaluationFiles $eval_files ${extra_opts} $corpus_path $relation_config_path $wikidata_path $temp_data_path $word2vec_path"
       if [ "$2" = "local" ]; then
         local cmd="sbt \"run $args\""
         printf "${GREEN}%s\n${RES}" $cmd
