Update env paths

--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ function runc() {
       local corpus_path="file:${DATA_PATH}/wikipedia-corpus-herd/$1"
       local relation_config_path="file:${DATA_PATH}/target_relations.tsv"
       local wikidata_path="file:${DATA_PATH}/wikidata"
-      local temp_data_path="file:${DATA_PATH}/0.8.0/relation_model"
+      local temp_data_path="file:${DATA_PATH}/prometheus-data/0.8.0/relation_model"
       local eval_files="file:${DATA_PATH}/eval_files/place_of_birth.json ../data/eval_files/institution.json"
       local word2vec_path="file:${DATA_PATH}/word2vec/$1"
       export SPARK_MASTER="local[*]"
