Update config with lang tag on AWS

--- a/.env
+++ b/.env
@@ -43,10 +43,10 @@ function runc() {
       ;;
     aws)
        local corpus_path="s3://sony-prometheus-data/herd/$1"
-       local relation_config_path="s3://sony-prometheus-data/big_config_sv.tsv"
+       local relation_config_path="s3://sony-prometheus-data/configs/target_relations_$1.tsv"
        local wikidata_path="s3://sony-prometheus-data/wikidata"
        local temp_data_path="s3://sony-prometheus-data/relation_model"
-       local eval_files="s3://sony-prometheus-data/eval-place_of_birth.json s3://sony-prometheus-data/eval_institution.json"
+       local eval_files="s3://sony-prometheus-data/google-evaluation/eval-place_of_birth.json s3://sony-prometheus-data/google-evaluation/eval_institution.json"
        local word2vec_path="s3://sony-prometheus-data/word2vec/$1"
        ;;
     exjobb8)
