Add language tag to semantica config in .env

--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ function runc() {
       ;;
     semantica)
       local corpus_path="hdfs:/user/ine11ega/herd/$1"
-      local relation_config_path="hdfs:/user/ine11ega/target_relations.tsv"
+      local relation_config_path="hdfs:/user/ine11ega/configs/target_relations_$1.tsv"
       local wikidata_path="hdfs:/user/marcusk/wikipedia-pipeline/mul/parsed-wikidata"
       local temp_data_path="hdfs:/user/ine11ega/relation_model"
       local eval_files="hdfs:/user/dat11al1/eval-place_of_birth.json.txt hdfs:/user/dat11al1/eval_institution.json"
